<resources>
    <string name="app_name">LealAppsChallenge</string>
    <string name="home_activity_tb_label">Início</string>
    <string name="home_activity_bt_exercises">Exercícios</string>
    <string name="home_activity_bt_workouts">Treinos</string>
    <string name="add_edit_workout_tb_add">Adicionar</string>
    <string name="add_edit_workout_tb_edit">Editar</string>
    <string name="add_edit_workout_tiet_name">Nome</string>
    <string name="add_edit_workout_tiet_description">Descrição</string>
    <string name="add_edit_workout_tiet_date">Data</string>
    <string name="add_edit_workout_tiet_date_selecione">Selecione</string>
    <string name="add_edit_workout_mn_delete">Excluir</string>
    <string name="login_activity_tiet_email">Email</string>
    <string name="login_activity_tiet_password">Senha</string>
    <string name="login_activity_tb_login">Entrar</string>
    <string name="login_activity_tv_no_account">Não tem uma Conta?</string>
    <string name="login_activity_tv_register">Cadastre-se</string>
    <string name="register_activity_tv_has_account">Ja tem uma Conta?</string>
    <string name="home_activity_mn_logout">Sair</string>
</resources>